# goodplacedeeplearning

./: .gitignore  CONTRIBUTING.md  CONVERSION_COMPLETE.md  INDEX.md  PYTORCH_CONVERSION_SUMMARY.md  PYTORCH_README.md  README.md  convert_advanced_notebooks.py  convert_notebooks.py  convert_remaining_notebooks.py  install.sh  requirements-dev.txt  requirements.txt  segmentation_simple.ipynb  setup.cfg  setup.py
CellandTissueSegmentation/: segmentation_simple.ipynb
Cifar/: Colab_cifar-10.ipynb  cifar-10.ipynb
Cifar/.ipynb_checkpoints/: Colab_cifar-10-checkpoint.ipynb
ImageNet/: visualize-heat-maps.ipynb
Imdb/: Imdb_overfit_underfit.ipynb
Keras/: README.md
Keras/01_Basics/: 00_fashion_mnist_basic_cnn.ipynb
Keras/03_Advanced_CNN/: 00_densenet_architecture.ipynb
Keras/04_Regularization/: 00_cifar10_regularization.ipynb
Keras/07_Time_Series/: 00_time_series_training.ipynb
Keras/08_NLP_Text/: 02_imdb_reviews_classification.ipynb
Keras/09_Advanced_Topics/: 01_pde_modulus_anatomy.ipynb  02_pde_spring_mass_problem.ipynb  04_pde_diffusion_problem.ipynb  09_pde_challenge_3.ipynb  10_pde_fno_darcy.ipynb  11_pde_parameterized_inverse.ipynb  15_video_deepstream_application.ipynb  16_video_mdnn_deepstream_application.ipynb
LearnSine/: learn_sine.ipynb
PDE_Nvidia/: Challenge_1_template.ipynb  Challenge_2_template.ipynb  Challenge_CFD_Problem_Notebook.ipynb  Diffusion_Problem_Parameterized.ipynb  Introductory_Notebook.ipynb  Spring_Mass_Inverse.ipynb
PredictHousePrices/: Boston_house_price.ipynb  Text_classification.ipynb  Text_classification_deployment.ipynb  Text_classification_welcome.ipynb
PredictHousePrices/.ipynb_checkpoints/: Boston_house_price-checkpoint.ipynb
PredictResponseStimuli/: Time_series_prediction.ipynb  Time_series_training.ipynb
PredictResponseStimuli/.ipynb_checkpoints/: Time_series_prediction-checkpoint.ipynb  Time_series_training-checkpoint.ipynb
PyTorch/: README.md
PyTorch/01_Basics/: 00_fashion_mnist_basic_cnn.ipynb  01_learn_sine_regression.ipynb  02_boston_house_price_regression.ipynb
PyTorch/02_Image_Classification/: 00_cifar10_classification.ipynb
PyTorch/03_Advanced_CNN/: 00_densenet_architecture.ipynb
PyTorch/04_Regularization/: 00_cifar10_regularization.ipynb  01_imdb_overfit_underfit.ipynb
Video_for_AI_Nvidia/: 00_introduction.ipynb
stimuli_response_data/: stimuli.csv
(+5 files in other folders)
