[metadata]
name = keras-deep-learning-course
version = 1.0.0
author = Good Place Deep Learning Community
author_email = contact@example.com
description = A comprehensive Keras deep learning course with 35+ progressive notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/goodplacedeeplearning
project_urls =
    Bug Tracker = https://github.com/yourusername/goodplacedeeplearning/issues
    Documentation = https://github.com/yourusername/goodplacedeeplearning/blob/main/Keras/README.md
    Source Code = https://github.com/yourusername/goodplacedeeplearning
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires =
    tensorflow>=2.10.0
    keras>=2.10.0
    numpy>=1.21.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    scikit-learn>=0.24.0
    jupyter>=1.0.0
    notebook>=6.4.0
    ipython>=7.0.0
    pillow>=8.0.0
    h5py>=2.10.0
    scipy>=1.7.0
    tqdm>=4.50.0

[options.extras_require]
dev =
    black>=22.0.0
    flake8>=4.0.0
    pytest>=6.0.0
    pytest-cov>=2.12.0
    ipynb>=0.5.1

gpu =
    tensorflow[and-cuda]>=2.10.0
    torch-cuda>=0.1.0

pde =
    modulus>=0.2.0
    nvidia-modulus>=0.2.0

video =
    opencv-python>=4.5.0
    nvidia-deepstream>=5.0

all =
    %(dev)s
    %(gpu)s
    %(pde)s
    %(video)s

[options.packages.find]
where = .
include = Keras*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.ipynb_checkpoints,.venv,venv
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=Keras --cov-report=html --cov-report=term-missing

[bdist_wheel]
universal = False
